# zerg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.txt  cpp_logger.cfg  main.cpp
.github/workflows/: ubuntu_clang.yml  ubuntu_clang_sanitizer.yml  ubuntu_gcc.yml  ubuntu_gcc_sanitizer.yml
benchmark/: logger_benchmark.cpp
cmake/: benchmark.cmake  cpplogger_gtests.cmake  gtests.cmake  zerg_gtests.cmake
include/cpp_logger/: constants.hpp  global_logger.hpp  lock_free_queue.hpp  log_sync.hpp  logger.hpp  logger.tpp  macros.hpp  verbosity.hpp
include/cpp_logger/backend/: console_log_backend.hpp  file_log_backend.hpp  ilog_backend.hpp
include/zerg/: constants.hpp  global_logger.hpp  log_sync.hpp  logger.hpp  logger.tpp  mpmc_queue.hpp  verbosity.hpp
include/zerg/backend/: console_log_backend.hpp  file_log_backend.hpp  ilog_backend.hpp
include/zerg/global/: console_logger.hpp  file_logger.hpp
src/: lock_free_queue.cpp  logger.cpp
tests/: console_logger_tests.cpp  global_logger_tests.cpp  lock_free_queue_tests.cpp  logger_tests.cpp  test_utils.hpp
